--- a/app/src/main/res/layout/activity_create_competition.xml
+++ b/app/src/main/res/layout/activity_create_competition.xml
@@ -184,6 +184,46 @@
             tools:visibility="visible" />
 
         <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/prize_for_winner"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@id/title_input_layout"
+            app:layout_constraintTop_toBottomOf="@id/copy_code_button" />
+
+        <CheckBox
+            android:id="@+id/prize_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/fab_margin"
+            app:layout_constraintBottom_toBottomOf="@id/textView5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textView5" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/prize_input_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:hint="@string/prize"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView5"
+            tools:visibility="visible">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/prize_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
             android:id="@+id/date_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -195,7 +235,7 @@
             app:layout_constraintHorizontal_bias="0.45"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/copy_code_button"
+            app:layout_constraintTop_toBottomOf="@id/prize_input_layout"
             tools:text="20 April, 2018" />
 
         <TextView
@@ -208,7 +248,7 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/date_text"
-            app:layout_constraintTop_toBottomOf="@id/copy_code_button"
+            app:layout_constraintTop_toBottomOf="@id/prize_input_layout"
             tools:text="15:00" />
 
         <TextView
@@ -247,6 +287,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:text="@string/select"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
