--- a/app/src/main/res/layout/recycler_competitions_item.xml
+++ b/app/src/main/res/layout/recycler_competitions_item.xml
@@ -8,7 +8,7 @@
     android:layout_marginEnd="12dp"
     android:layout_marginStart="12dp"
     android:layout_marginTop="4dp"
-    app:cardBackgroundColor="#00ff80"
+    app:cardBackgroundColor="#a7ffd3"
     app:cardCornerRadius="8dp"
     tools:ignore="ContentDescription">
 
